/**
 * Copyright (c) 2022 Peking University and Peking University Institute for Computing and Digital Economy
 * SCOW is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *          http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
 * EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
 * MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";

package scow_notification;

import "protos/common.proto";

message ModifyUserSubscriptionRequest {
  repeated MessageConfig configs = 1;
}

message ModifyUserSubscriptionResponse {
}

message Subscription {
  optional NoticeType notice_type = 1;
  string message_type = 2;
  optional bool is_subscribed = 3;
}

message ListUserSubscriptionsRequest {
}

message ListUserSubscriptionsResponse {
  uint32 totalCount = 1;
  repeated MessageConfig configs = 2;
}



service UserSubscriptionService {
  rpc ModifyUserSubscription(ModifyUserSubscriptionRequest) returns (ModifyUserSubscriptionResponse);

  rpc ListUserSubscriptions(ListUserSubscriptionsRequest) returns (ListUserSubscriptionsResponse);

}
